--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "enzyme-adapter-react-16": "^1.12.1",
     "husky": "1.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-css-modules": "^2.0.0",
+    "jest-environment-jsdom-fourteen": "^0.1.0",
+    "jest-prop-type-error": "^1.1.0",
+    "jest-resolve": "^24.8.0",
+    "jest-watch-typeahead": "^0.3.1",
     "lint-staged": "8.1.5",
     "react": "^17.0.2",
     "react-datepicker": "^4.3.0",
@@ -18,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.1.0",
     "react-scripts": "^4.0.3",
+    "react-test-renderer": "^16.8.6",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.35.1",
@@ -26,9 +34,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --colors",
     "eject": "react-scripts eject",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "husky": {
     "hooks": {
@@ -55,5 +65,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.9.0"
   }
 }
