--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jest-prop-type-error": "^1.1.0",
     "jest-resolve": "^24.8.0",
     "jest-watch-typeahead": "^0.3.1",
+    "json-server": "^0.17.0",
     "lint-staged": "8.1.5",
     "react": "^17.0.2",
     "react-datepicker": "^4.3.0",
@@ -32,7 +33,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all -p server:*",
+    "server:api": "node server.js",
+    "server:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest --colors",
     "eject": "react-scripts eject",
@@ -67,6 +70,7 @@
     ]
   },
   "devDependencies": {
-    "enzyme": "^3.9.0"
+    "enzyme": "^3.9.0",
+    "npm-run-all": "^4.1.5"
   }
 }
